--- a/contact.html
+++ b/contact.html
@@ -104,7 +104,7 @@
                 <li
                   class="text-gray-700 hover:text-gray-900 cursor-pointer text-base lg:text-lg pt-10 md:pt-0 md:ml-5 lg:ml-10"
                 >
-                  <a href="Feature.html">Feature</a>
+                  <a href="feature.html">Feature</a>
                 </li>
                 <li
                   class="text-gray-700 hover:text-gray-900 cursor-pointer text-base lg:text-lg pt-10 md:pt-0 md:ml-5 lg:ml-10"
